--- a/.env
+++ b/.env
@@ -61,7 +61,7 @@ TWITTER_LINK="https://www.twitter.com"
 GOOGLE_LINK="https://www.google.com"
 LINKEDIN_LINK="https://www.linkedin.com"
 INSTAGRAM_LINK="https://www.instagram.com"
-SITE_NUMBER = "+91 9871396956"
+SITE_NUMBER = "+91-9871396956"
 
 EMAIL_HOST= 'smtp.gmail.com'
 EMAIL_USERNAME='notifications@univsportatech.in'
