--- a/.env
+++ b/.env
@@ -54,7 +54,7 @@ MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 
 PHONE=""
-SITE_NAME="UNIV SPORTA"
+SITE_NAME="UNIV SPORTATECH"
 EMAIL_SENDER_NAME="Administrator"
 FACEBOOK_LINK="https://www.facebook.com"
 TWITTER_LINK="https://www.twitter.com"
