modified email password

--- a/.env
+++ b/.env
@@ -65,4 +65,4 @@ SITE_NUMBER = "+91-9871396956"
 
 EMAIL_HOST= 'smtp.gmail.com'
 EMAIL_USERNAME='notifications@univsportatech.in'
-EMAIL_PASSWORD='univ@app'
+EMAIL_PASSWORD='notification@univ'
